--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -14,9 +14,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@id/til3"
         app:layout_constraintEnd_toStartOf="@id/tiet2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/tiet1"
@@ -34,6 +36,7 @@
         android:layout_marginStart="8dp"
         android:text="Type"
         android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/tiet2"
         app:layout_constraintEnd_toEndOf="@id/tiet2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tiet2"
@@ -49,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="@id/til1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/til1"
         app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <android.support.design.widget.TextInputLayout
@@ -61,7 +64,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/til4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til1"
@@ -85,7 +88,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/til5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til3"
@@ -148,6 +151,7 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/addWordButton"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/addWordButton"
         app:layout_constraintTop_toTopOf="@+id/addWordButton" />
 
 
