Changed Button Style on Home Page

--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -135,7 +135,6 @@
         android:layout_marginStart="16dp"
         android:text="Look Online"
         android:textAllCaps="true"
-        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/addWordButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/addWordButton"
@@ -149,6 +148,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:text="Add Word"
+        android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/searchButton"
