--- a/app/src/main/res/layout/fragment_update_word.xml
+++ b/app/src/main/res/layout/fragment_update_word.xml
@@ -156,9 +156,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="Update Word"
+        android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uTil5" />
 
