strings.xml updated + minor style changes

--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -25,7 +25,7 @@
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Word" />
+            android:hint="@string/hint_word" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Type"
+        android:text="@string/hint_type"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/tiet2"
         app:layout_constraintEnd_toEndOf="@id/tiet2"
@@ -75,7 +75,7 @@
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Short Meaning" />
+            android:hint="@string/hint_meaning" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -99,7 +99,7 @@
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Synonyms" />
+            android:hint="@string/hint_synonyms" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -122,7 +122,7 @@
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Example"
+            android:hint="@string/hint_example"
             android:minHeight="100dp" />
 
     </android.support.design.widget.TextInputLayout>
@@ -133,7 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Look Online"
+        android:text="@string/btn_look_online"
         android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="@+id/addWordButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
-        android:text="Add Word"
+        android:text="@string/btn_add_word"
         android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
